# qudt-for-domain-tools

./: .gitignore  GETTING-STARTED  LICENSE  README.md  build.gradle  build_ontologies.py  code-gen-query-examples.py  getDependencies.sh  get_dependencies.py  load_data.py  server_warp.py  start.sh  start_fuseki.py  start_fuseki.sh  test_qudt4dt.py  test_queries.py  test_server_wrap.py
CPP_interface/: length.h  modelica.h  qudt4dt.h  qudt4dt.hpp  qudt4dt.vcxproj  sample.cpp
CPP_interface/sparql/: sparql.cpp  sparql.h  sparql.hpp  test.cpp
barbara/NET_4_0/Barbara/: Barbara.cs  Barbara.sln  ClassUri.cs  DomainToolUnit.cs  ModelicaUnit.cs  Qudt4dtUnit.cs  QudtUnit.cs  Test.cs  Thing.cs  qudt4dt.csproj
barbara/NET_4_0/Barbara/PrivateUtils/: Query.cs
barbara/NET_4_0/Barbara/Properties/: AssemblyInfo.cs
barbara/NET_4_0/Barbara/Utils/: Convert.cs  Mapping.cs
barbara/NET_4_0/GenerateUnitClasses/: GenerateUnitClasses.csproj  Program.cs  UnitClassData.cs
barbara/NET_4_0/GenerateUnitClasses/Properties/: AssemblyInfo.cs
barbara/NET_4_0/qudt4dt_example/: Program.cs  qudt4dt_example.csproj
barbara/NET_4_0/qudt4dt_example/Properties/: AssemblyInfo.cs
cxx/: CMakeLists.txt  README  qudt4dt.gyp  sample.cpp
cxx/include/: quantity.hpp  qudt4dt.hpp  qudtUnit.hpp  utils.hpp
cxx/include/modelica/: modelicaUnit.hpp
cxx/include/sparql/: sparql.hpp
cxx/include/unit/: mdaoUnit.hpp  modelicaUnit.hpp  qudtUnit.hpp  unit.hpp
cxx/lib/win/: jsoncpp.lib  libqudt4dt.lib
cxx/src/: CMakeLists.txt  mdaoUnit.cpp  modelicaUnit.cpp  qudt4dt.cpp  qudtUnit.cpp  sparql.cpp
cxx/src/modelica/: CMakeLists.txt  modelicaUnit.cpp
cxx/src/sparql/: CMakeLists.txt  sparql.cpp
extensions-owl/: modelica-individuals.xml  modelica.xml
fusekiutils/: __init__.py
modelica/: MSL2OWL.py  SIunits.mo  build_auto_mappings.py  catalog-v001.xml  export_modelica_units.py  mapping-to-qudt-auto.csv  mapping-to-qudt-manual.csv  mapping-to-qudt.csv  modelica.xml  modelica_units.json  omc_session.py
modelica/CustomUnitLibraryTest/: package.mo  package.order
ontologies/: catalog-v001.xml  qudt4dt-ontology.xml
ontologies/modelica/: MSL2OWL.py  catalog-v001.xml  export_modelica_units.py  export_modelica_units.txt  mapping-to-qudt.csv  modelica.xml  omc_session.py
ontologies/python/fusekiutils/: __init__.py
ontologies/qudt4dt/: catalog-v001.xml  qudt4dt-ontology.xml
openMDAO/: catalog-v001.xml  export_openMDAO_units.py  export_qudt_symbol.py  mapping-to-qudt.csv  openMDAO.xml
python/: MSL2OWL.py
qudt-owl/: missing unit.xml
qudt4dt/: __init__.py  barbara.py  mdao.py  modelica.py  qudt.proto  qudt.py  qudt_pb2.py  setup.py  sparqlcommands.py  unit_mapping.py
qudt4dt/GME interp/cs_client/: cs_client.sln
qudt4dt/GME interp/cs_client/cs_client/: Program.cs  Qudt4dt.cs  cs_client.csproj
qudt4dt/GME interp/model/: meta.mga  qudt4dt_sample.mga  qudtUnit.cs  qudtUnit.mta
qudt4dt/GME interp/model/qudt/: qudtUnit.xmp
qudt4dt/GME interp/qudt4dtUnitConversion/: AssemblySignature.snk  ComponentConfig.cs  qudt4dtUnitConversion.cs  qudt4dtUnitConversion.csproj  qudt4dtUnitConversion.sln
qudt4dt/GME interp/qudt4dtUnitConversion/Properties/: AssemblyInfo.cs
qudt4dt/GME interp/qudt4dtUnitConversion/client/: MdaoAttr.cs  MdaoUnit.cs  ModelicaUnit.cs  Program.cs  Qudt4dt_base.cs  QudtUnit.cs  Unit.cs
qudt4dt/barbara/: main.py
qudt4dt/fusekiutils/: __init__.py
qudt4dt/qudt4dtServer/: README.md  build.gradle  build.xml
qudt4dt/qudt4dtServer/servlet/src/: web.xml
qudt4dt/qudt4dt_server/: README.md  build.xml
qudt4dt/qudt4dt_server/src/qudt4dt/: Server.java  ServerHandler.java  ServletTest.java  Sparql.java  WebServlet.java
qudt4dt/qudt4dt_server/webTest/: index.html  web.xml
qudt4dt/qudt_pb2/: __init__.py  qudt.proto  qudt_pb2.py
qudt4dt/server/: client_sample.py  server_warp.py
qudt4dt/thrift/: client_sample.py  protocal.thrift  server_warp.py  test.py  test_server_wrap.py
qudt4dt/thrift_version/: TestFactoryUlits.java  TestServerHandle.java  protocal.thrift
qudt4dt/thrift_version/qudt4dt/: Server.java  ServerHandler.java  Sparql.java  client.java  test.java
qudt4dt/thrift_version/qudt4dt/factory/: Factory.java  (+4 more)
qudt4dt/unit/: __init__.py  mdao.py  modelica.py  qudt.py
server/: build.gradle  settings.gradle
thrift/: client_sample.py
thrift/gen-js/: Qudt4dt_base.js  protocal_types.js
(+66 files in other folders)
